--- a/Module-03/src/index.css
+++ b/Module-03/src/index.css
@@ -1,82 +1,1 @@
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; 
-.background {
-  background-color: rgb(109, 160, 160);
-}
-.picture {
-  mix-blend-mode: darken;
-}
-.www {
-  width: 35%;
-  aspect-ratio: 3/2;
-  object-fit: contain;
-  mix-blend-mode: darken;
-} */
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: sans-serif;
-  margin: 20px;
-  padding: 0;
-}
-
-h1 {
-  margin-top: 0;
-  font-size: 22px;
-}
-
-h2 {
-  margin-top: 0;
-  font-size: 20px;
-}
-
-h3 {
-  margin-top: 0;
-  font-size: 18px;
-}
-
-h4 {
-  margin-top: 0;
-  font-size: 16px;
-}
-
-h5 {
-  margin-top: 0;
-  font-size: 14px;
-}
-
-h6 {
-  margin-top: 0;
-  font-size: 12px;
-}
-
-code {
-  font-size: 1.2em;
-}
-
-ul {
-  padding-inline-start: 20px;
-}
-
-.chat,
-.contact-list {
-  float: left;
-  margin-bottom: 20px;
-}
-ul,
-li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-li button {
-  width: 100px;
-  padding: 10px;
-  margin-right: 10px;
-}
-textarea {
-  height: 150px;
-}
+@import "tailwindcss";
